# react-native-lingua

./: .env.example  .gitignore  README.md  app.config.js  app.json  global.css  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json
.claude/skills/integration-expo/: SKILL.md
app/: LanguageSelection.tsx  _layout.tsx  index.tsx  language-selection.tsx  onboarding.tsx  profile.tsx
app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  home.tsx  learn.tsx  profile.tsx
app/api/stream/: audio-call+api.ts
app/api/vision-agent/: captions+api.ts  session+api.ts
app/lesson/: [lessonId].tsx
components/: audio-teacher-session.tsx  auth-screen.tsx  bottom-tab-bar.tsx  chat-input-bar.tsx  chat-message-bubble.tsx  lesson-card.tsx  tab-placeholder-screen.tsx
constants/: images.ts  theme.ts
data/: languages.ts  lessons.ts  units.ts
data/course-lessons/: chinese.ts  english.ts  french.ts  japanese.ts  korean.ts  shared.ts  spanish.ts
features/chat/: tutor-reply.ts
hooks/: useStreamAudioCall.ts
lib/: analytics.ts  api.ts  posthog.ts
prompts/: 05-clerk.md  18-more-posthog.md
store/: UseLanguageStore.ts  use-chat-store.ts  use-theme-store.ts
theme/: tokens.ts
types/: learning.ts
vision-agent/: .gitignore  README.md  agent.py  pyproject.toml
