[project]
name = "lingua-vision-agent"
version = "0.1.0"
description = "Voice-only AI language teacher powered by Vision Agents, OpenAI Realtime, and Stream Edge."
requires-python = ">=3.12,<3.13"
dependencies = [
  "python-dotenv>=1.0.1",
  "vision-agents[getstream,openai]>=0.2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py312"
